--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,3 @@
 <resources>
-    <string name="app_name">Images2Video</string>
-
-    <string name="cancel">Cancel</string>
-    <string name="save">Save</string>
-    <string name="short_seconds">sec</string>
-    <string name="megabyte">MB</string>
-    <string name="kilobyte">KB</string>
+    <string name="app_name">FFMpeg Examples</string>
 </resources>
